tests/tests/checks/snapshots/analysis/cpp/ForwardingTemplates.cpp/check_glob@TypeDependentNewInMethodReportedAtCallSite.snap
---
source: tests/test_check_insta.rs
expression: "&json_results"
---
[
  {
    "loc": "00085:2-21",
    "source": 1,
    "nestingRange": "85:24-85:25",
    "syntax": "def,function",
    "type": "void (void)",
    "pretty": "function StructUsedInEmplace::StructUsedInEmplace",
    "sym": "_ZN19StructUsedInEmplaceC1Ev"
  },
  {
    "loc": "00085:2-21",
    "structured": 1,
    "pretty": "StructUsedInEmplace::StructUsedInEmplace",
    "sym": "_ZN19StructUsedInEmplaceC1Ev",
    "args": [],
    "kind": "method",
    "parentsym": "T_StructUsedInEmplace",
    "overrides": [],
    "props": [
      "instance",
      "user"
    ]
  },
  {
    "loc": "00085:2-21",
    "target": 1,
    "kind": "def",
    "pretty": "StructUsedInEmplace::StructUsedInEmplace",
    "sym": "_ZN19StructUsedInEmplaceC1Ev",
    "context": "StructUsedInEmplace",
    "contextsym": "T_StructUsedInEmplace"
  },
  {
    "loc": "00090:4-18",
    "source": 1,
    "syntax": "use,constructor",
    "pretty": "constructor StructUsedInEmplace::StructUsedInEmplace",
    "sym": "_ZN19StructUsedInEmplaceC1Ev"
  },
  {
    "loc": "00090:4-18",
    "target": 1,
    "kind": "use",
    "pretty": "StructUsedInEmplace::StructUsedInEmplace",
    "sym": "_ZN19StructUsedInEmplaceC1Ev",
    "context": "use_maybe",
    "contextsym": "_Z9use_maybev"
  },
  {
    "loc": "00091:4-23",
    "source": 1,
    "syntax": "use,constructor",
    "pretty": "constructor StructUsedInEmplace::StructUsedInEmplace",
    "sym": "_ZN19StructUsedInEmplaceC1Ev"
  },
  {
    "loc": "00091:4-23",
    "target": 1,
    "kind": "use",
    "pretty": "StructUsedInEmplace::StructUsedInEmplace",
    "sym": "_ZN19StructUsedInEmplaceC1Ev",
    "context": "use_maybe",
    "contextsym": "_Z9use_maybev"
  },
  {
    "loc": "00094:4-16",
    "source": 1,
    "syntax": "use,constructor",
    "pretty": "constructor StructUsedInEmplace::StructUsedInEmplace",
    "sym": "_ZN19StructUsedInEmplaceC1Ev"
  },
  {
    "loc": "00094:4-16",
    "target": 1,
    "kind": "use",
    "pretty": "StructUsedInEmplace::StructUsedInEmplace",
    "sym": "_ZN19StructUsedInEmplaceC1Ev",
    "context": "use_maybe",
    "contextsym": "_Z9use_maybev"
  }
]
