tests/tests/checks/snapshots/analysis/cpp/ForwardingTemplates.cpp/check_glob@TypeDependentNewInTemplateReportedAtCallSite.snap
---
source: tests/test_check_insta.rs
expression: "&json_results"
---
[
  {
    "loc": "00005:2-31",
    "source": 1,
    "nestingRange": "5:34-5:35",
    "syntax": "def,function",
    "type": "void (void)",
    "pretty": "function StructUsedInTypeDependentNew0::StructUsedInTypeDependentNew0",
    "sym": "_ZN29StructUsedInTypeDependentNew0C1Ev"
  },
  {
    "loc": "00005:2-31",
    "structured": 1,
    "pretty": "StructUsedInTypeDependentNew0::StructUsedInTypeDependentNew0",
    "sym": "_ZN29StructUsedInTypeDependentNew0C1Ev",
    "args": [],
    "kind": "method",
    "parentsym": "T_StructUsedInTypeDependentNew0",
    "overrides": [],
    "props": [
      "instance",
      "user"
    ]
  },
  {
    "loc": "00005:2-31",
    "target": 1,
    "kind": "def",
    "pretty": "StructUsedInTypeDependentNew0::StructUsedInTypeDependentNew0",
    "sym": "_ZN29StructUsedInTypeDependentNew0C1Ev",
    "context": "StructUsedInTypeDependentNew0",
    "contextsym": "T_StructUsedInTypeDependentNew0"
  },
  {
    "loc": "00042:17-36",
    "source": 1,
    "syntax": "use,constructor",
    "pretty": "constructor StructUsedInTypeDependentNew0::StructUsedInTypeDependentNew0",
    "sym": "_ZN29StructUsedInTypeDependentNew0C1Ev"
  },
  {
    "loc": "00042:17-36",
    "target": 1,
    "kind": "use",
    "pretty": "StructUsedInTypeDependentNew0::StructUsedInTypeDependentNew0",
    "sym": "_ZN29StructUsedInTypeDependentNew0C1Ev",
    "context": "test",
    "contextsym": "_Z4testv"
  },
  {
    "loc": "00043:17-36",
    "source": 1,
    "syntax": "use,constructor",
    "pretty": "constructor StructUsedInTypeDependentNew0::StructUsedInTypeDependentNew0",
    "sym": "_ZN29StructUsedInTypeDependentNew0C1Ev"
  },
  {
    "loc": "00043:17-36",
    "target": 1,
    "kind": "use",
    "pretty": "StructUsedInTypeDependentNew0::StructUsedInTypeDependentNew0",
    "sym": "_ZN29StructUsedInTypeDependentNew0C1Ev",
    "context": "test",
    "contextsym": "_Z4testv"
  },
  {
    "loc": "00046:17-27",
    "source": 1,
    "syntax": "use,constructor",
    "pretty": "constructor StructUsedInTypeDependentNew0::StructUsedInTypeDependentNew0",
    "sym": "_ZN29StructUsedInTypeDependentNew0C1Ev"
  },
  {
    "loc": "00046:17-27",
    "target": 1,
    "kind": "use",
    "pretty": "StructUsedInTypeDependentNew0::StructUsedInTypeDependentNew0",
    "sym": "_ZN29StructUsedInTypeDependentNew0C1Ev",
    "context": "test",
    "contextsym": "_Z4testv"
  },
  {
    "loc": "00047:17-27",
    "source": 1,
    "syntax": "use,constructor",
    "pretty": "constructor StructUsedInTypeDependentNew0::StructUsedInTypeDependentNew0",
    "sym": "_ZN29StructUsedInTypeDependentNew0C1Ev"
  },
  {
    "loc": "00047:17-27",
    "target": 1,
    "kind": "use",
    "pretty": "StructUsedInTypeDependentNew0::StructUsedInTypeDependentNew0",
    "sym": "_ZN29StructUsedInTypeDependentNew0C1Ev",
    "context": "test",
    "contextsym": "_Z4testv"
  },
  {
    "loc": "00050:17-36",
    "source": 1,
    "syntax": "use,constructor",
    "pretty": "constructor StructUsedInTypeDependentNew0::StructUsedInTypeDependentNew0",
    "sym": "_ZN29StructUsedInTypeDependentNew0C1Ev"
  },
  {
    "loc": "00050:17-36",
    "target": 1,
    "kind": "use",
    "pretty": "StructUsedInTypeDependentNew0::StructUsedInTypeDependentNew0",
    "sym": "_ZN29StructUsedInTypeDependentNew0C1Ev",
    "context": "test",
    "contextsym": "_Z4testv"
  },
  {
    "loc": "00051:17-36",
    "source": 1,
    "syntax": "use,constructor",
    "pretty": "constructor StructUsedInTypeDependentNew0::StructUsedInTypeDependentNew0",
    "sym": "_ZN29StructUsedInTypeDependentNew0C1Ev"
  },
  {
    "loc": "00051:17-36",
    "target": 1,
    "kind": "use",
    "pretty": "StructUsedInTypeDependentNew0::StructUsedInTypeDependentNew0",
    "sym": "_ZN29StructUsedInTypeDependentNew0C1Ev",
    "context": "test",
    "contextsym": "_Z4testv"
  },
  {
    "loc": "00054:17-37",
    "source": 1,
    "syntax": "use,constructor",
    "pretty": "constructor StructUsedInTypeDependentNew0::StructUsedInTypeDependentNew0",
    "sym": "_ZN29StructUsedInTypeDependentNew0C1Ev"
  },
  {
    "loc": "00054:17-37",
    "target": 1,
    "kind": "use",
    "pretty": "StructUsedInTypeDependentNew0::StructUsedInTypeDependentNew0",
    "sym": "_ZN29StructUsedInTypeDependentNew0C1Ev",
    "context": "test",
    "contextsym": "_Z4testv"
  },
  {
    "loc": "00055:17-37",
    "source": 1,
    "syntax": "use,constructor",
    "pretty": "constructor StructUsedInTypeDependentNew0::StructUsedInTypeDependentNew0",
    "sym": "_ZN29StructUsedInTypeDependentNew0C1Ev"
  },
  {
    "loc": "00055:17-37",
    "target": 1,
    "kind": "use",
    "pretty": "StructUsedInTypeDependentNew0::StructUsedInTypeDependentNew0",
    "sym": "_ZN29StructUsedInTypeDependentNew0C1Ev",
    "context": "test",
    "contextsym": "_Z4testv"
  },
  {
    "loc": "00059:24-35",
    "source": 1,
    "syntax": "use,constructor",
    "pretty": "constructor StructUsedInTypeDependentNew0::StructUsedInTypeDependentNew0",
    "sym": "_ZN29StructUsedInTypeDependentNew0C1Ev"
  },
  {
    "loc": "00059:24-35",
    "target": 1,
    "kind": "use",
    "pretty": "StructUsedInTypeDependentNew0::StructUsedInTypeDependentNew0",
    "sym": "_ZN29StructUsedInTypeDependentNew0C1Ev",
    "context": "test",
    "contextsym": "_Z4testv"
  }
]
